--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script>
-  let baseurl = "http://localhost:63342/rimm/template/index.html?#"
+  let baseurl = "https://danielsalomons17.github.io/web/"
   //setContent(new URLSearchParams(window.location.search).get('word'))
 
   function getSearchValue(){
