--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
   function getSearchValue(){
       let word = document.getElementById("search").value
       console.log(document.location.href+"?word="+word)
-      window.location.href = baseurl + "word="+word;
-      window.location = baseurl + "word="+word;
+      //window.location.href = baseurl + "word="+word;
+      //window.location = baseurl + "word="+word;
       setContent(word)
   }
 
