--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
   <meta name="description" content="Kebabskatt pizzakarta">
   <meta name="author" content="Daniel Salomons - daniel@salomon.se">
   <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
-
+  <style type="text/css">
+    body, html
+    {
+        margin: 0; padding: 0; height: 100%; overflow: hidden;
+    }
+</style>
   <title>Pizzakarta</title>
 </head>
 
 <body>
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1N7D6s3aGu8Av7dmiXagdnD9e735Z1vhv&ehbc=2E312F" width="640" height="480"></iframe>
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1N7D6s3aGu8Av7dmiXagdnD9e735Z1vhv&ehbc=2E312F" width="100%" height="100%"></iframe>
 </body>
 </html>
